--- a/samples/todo/package.json
+++ b/samples/todo/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "maestro-roku",
+  "name": "maestro-roku-todo-sample",
   "version": "0.1.0",
-  "description": "A development platform for building roku channels in brighterscript",
+  "description": "TODO app built using maestro framework",
   "main": "index.js",
   "directories": {
     "doc": "docs"
   },
   "dependencies": {
     "gulp-header": "^2.0.7",
+    "maestro-cli": "file:../../../maestro-cli",
     "roku-deploy": "^2.0.0",
     "ts-node": "^8.1.0"
   },
@@ -24,7 +25,6 @@
     "ink-docstrap": "1.3.0",
     "jsdoc": "3.5.5",
     "minami": "^1.2.3",
-    "rooibos-preprocessor": "^2.1.0",
     "typescript": "^3.4.5",
     "vinyl-paths": "^2.1.0"
   },
