--- a/package.json
+++ b/package.json
@@ -9,20 +9,22 @@
   "dependencies": {
     "fs-extra": "^5.0.0",
     "gulp-header": "^2.0.7",
+    "gulp-unzip": "^1.1.0",
     "maestro-cli": "file:../maestro-cli",
     "roku-deploy": "^2.0.0",
     "ts-node": "^8.1.0"
   },
   "devDependencies": {
+    "@types/fs-extra": "^8.0.0",
     "burp-brightscript": "^0.3.2",
     "del": "^3.0.0",
     "docdash": "^0.4.0",
-    "@types/fs-extra": "^8.0.0",
     "gulp": "^4.0.1",
     "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
     "gulp-copy": "^4.0.1",
     "gulp-rm-lines": "0.0.9",
+    "gulp-zip": "^5.0.0",
     "gulpclass": "^0.2.0",
     "ink-docstrap": "1.3.0",
     "jsdoc": "3.5.5",
