ignore maestro in samples, so that it can be updated as part of the build

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ local.properties
 node_modules/
 frameworkTests/source/tests/rooibosDist.brs
 outRun
+samples/todo/src/components/maestro
+samples/todo/src/source/maestro
