--- a/samples/todo/package.json
+++ b/samples/todo/package.json
@@ -8,7 +8,6 @@
   },
   "dependencies": {
     "gulp-header": "^2.0.7",
-    "maestro-cli": "file:../../../maestro-cli",
     "roku-deploy": "^2.0.0",
     "ts-node": "^8.1.0"
   },
@@ -24,6 +23,7 @@
     "gulpclass": "^0.2.0",
     "ink-docstrap": "1.3.0",
     "jsdoc": "3.5.5",
+    "maestro-cli": "^1.1.10",
     "minami": "^1.2.3",
     "typescript": "^3.4.5",
     "vinyl-paths": "^2.1.0"
