--- a/samples/todo/package.json
+++ b/samples/todo/package.json
@@ -23,12 +23,16 @@
     "gulpclass": "^0.2.0",
     "ink-docstrap": "1.3.0",
     "jsdoc": "3.5.5",
-    "maestro-cli": "^1.1.10",
+    "maestro-cli-roku": "file:../../../maestro-cli",
+    "maestro-roku": "file:../..",
     "minami": "^1.2.3",
     "typescript": "^3.4.5",
     "vinyl-paths": "^2.1.0"
   },
-  "scripts": {},
+  "scripts": {
+    "use-live-cli": "npm install maestro-cli-roku --save-dev",
+    "use-local-cli": "npm install ../../../maestro-cli --save-dev"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/georgejecook/maestro.git"
