--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ frameworkTests/source/tests/rooibosDist.brs
 outRun
 samples/todo/src/components/maestro
 samples/todo/src/source/maestro
+samples/todoXMLBindings/src/components/maestro
+samples/todoXMLBindings/src/source/maestro
