--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@types/fs-extra": "^8.0.0",
+    "brightscript-language": "^0.2.15",
     "burp-brightscript": "^0.3.2",
     "del": "^3.0.0",
     "docdash": "^0.4.0",
