--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@ samples/todoXMLBindings/src/components/maestro
 samples/todoXMLBindings/src/source/maestro
 samples/eloquently-managing-deep-linking/src/source/maestro
 samples/eloquently-managing-deep-linking/src/components/maestro
+samples/controls/src/source/maestro
+samples/controls/src/components/maestro
