feat(core): improves focus management, by creating a new node called FocusManager, and changing the focus api. We now simply set isFocused, and isChildrenFocused on a node, and the mixing observes these values. this stops the seriously chatty focus mangement situation we had when relying on the SG framework for focus guidance. As long as you use focusMixin's setFocus method, you are going to have a good time, and know what is going on :)

--- a/samples/todo/package.json
+++ b/samples/todo/package.json
@@ -30,8 +30,8 @@
     "vinyl-paths": "^2.1.0"
   },
   "scripts": {
-    "use-live-cli": "npm install maestro-cli-roku --save-dev",
-    "use-local-cli": "npm install ../../../maestro-cli --save-dev"
+    "use-live-cli": "rm -rf node_modules/maestro-cli-roku && npm install maestro-cli-roku --save-dev",
+    "use-local-cli": "rm -rf node_modules/maestro-cli-roku && npm install ../../../maestro-cli --save-dev"
   },
   "repository": {
     "type": "git",
