--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "gulpclass": "^0.2.0",
     "ink-docstrap": "1.3.0",
     "jsdoc": "3.5.5",
-    "maestro-cli-roku": "^0.8.2",
+    "maestro-cli-roku": "file:../maestro-cli",
     "minami": "^1.2.3",
-    "rooibos-cli": "^1.0.1",
+    "rooibos-cli": "^1.2.0",
     "typescript": "^3.4.5",
     "vinyl-paths": "^2.1.0"
   },
@@ -53,5 +53,12 @@
   "bugs": {
     "url": "https://github.com/georgejecook/maestro/issues"
   },
-  "homepage": "https://github.com/georgejecook/maestro#readme"
+  "homepage": "https://github.com/georgejecook/maestro#readme",
+  "ts-node": {
+    "transpileOnly": true,
+    "compileOptions": {
+      "incremental": true,
+      "allowJs": false
+    }
+  }
 }
