--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "gulpclass": "^0.2.0",
     "ink-docstrap": "1.3.0",
     "jsdoc": "3.5.5",
-    "maestro-cli-roku": "file:../maestro-cli",
+    "maestro-cli-roku": "^0.15.2",
     "minami": "^1.2.3",
     "rooibos-cli": "^1.2.0",
     "typescript": "^3.4.5",
