--- a/samples/eloquently-managing-deep-linking/package.json
+++ b/samples/eloquently-managing-deep-linking/package.json
@@ -23,8 +23,7 @@
     "gulpclass": "^0.2.0",
     "ink-docstrap": "1.3.0",
     "jsdoc": "3.5.5",
-    "maestro-cli-roku": "file:../../../maestro-cli",
-    "maestro-roku": "file:../..",
+    "maestro-cli-roku": "^0.15.4",
     "minami": "^1.2.3",
     "typescript": "^3.4.5",
     "vinyl-paths": "^2.1.0"
