--- a/samples/todoXMLBindings/package.json
+++ b/samples/todoXMLBindings/package.json
@@ -23,7 +23,7 @@
     "gulpclass": "^0.2.0",
     "ink-docstrap": "1.3.0",
     "jsdoc": "3.5.5",
-    "maestro-cli-roku": "file:../../../maestro-cli",
+    "maestro-cli-roku": "^0.15.4",
     "maestro-roku": "file:../..",
     "minami": "^1.2.3",
     "typescript": "^3.4.5",
