--- a/samples/eloquently-managing-deep-linking/devScripts/.env
+++ b/samples/eloquently-managing-deep-linking/devScripts/.env
@@ -5,5 +5,6 @@
 # ROKU_DEV_TARGET=192.168.2.2
 # ROKU_DEV_TARGET=192.168.2.4
 # ROKU_DEV_TARGET=192.168.2.6
-ROKU_DEV_TARGET=192.168.0.106
+# ROKU_DEV_TARGET=192.168.0.106
+ROKU_DEV_TARGET=192.168.8.204
 ROKU_DEVPASSWORD=aaaa
